--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!--     This is the main container -->
     <div class="container">
         <div class="controls">
             <button id="scrambleBtn1" onclick="scramble(10)">Scramble (Easy)</button>
@@ -21,7 +22,7 @@
         <p id="movesText"></p>
         <p id="stepInfo"></p>
     </div>
-
+<!-- cube 3d container -->
     <div class="cube-3d-container" id="cube-3d-container">
         <div class="cube-3d" id="cube-3d"></div>
     </div>
